Regression: Socket subtype do not work for node groups #112247

Closed
opened 2023-09-11 18:11:41 +02:00 by Iliya Katushenock · 0 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-01 13:21, hash: 400f7c22bc98
Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-25 22:23, hash: 67843e188b24

Short description of error
Socket ui should look the same as in modifier panel.

Old New
image image

Exact steps for others to reproduce the error
Open attached file.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.56 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-01 13:21, hash: `400f7c22bc98` Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-25 22:23, hash: `67843e188b24` **Short description of error** Socket ui should look the same as in modifier panel. | Old | New | | -- | -- | | ![image](/attachments/4f9ebefa-46ed-4733-9666-f1559a91b0a2) | ![image](/attachments/5dc6fda5-3a85-4e80-b01d-c72875af8051) | **Exact steps for others to reproduce the error** Open attached file.
Lukas Tönne was assigned by Iliya Katushenock 2023-09-11 18:11:43 +02:00
Iliya Katushenock added
Type
Bug
and removed
Type
Report
labels 2023-09-11 18:12:23 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-12 17:13:51 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112247
No description provided.